# Plan44-HomeAssistant-Integration

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  hacs.json  precommit_check.ps1  precommit_check.sh  pyproject.toml  pyrightconfig.json  pytest.ha.ini  pytest.live.ini  requirements_ha_test.txt  requirements_test.txt
.github/workflows/: ci.yml
custom_components/plan44/: __init__.py  binary_sensor.py  bridge_entities.py  config_flow.py  const.py  coordinator.py  device_coordinator.py  device_templates.py  diagnostics.py  inbound.py  light.py  manifest.json  plan44_client.py  sensor.py  state_mapping.py  strings.json  system_health.py  web_client.py
custom_components/plan44/plan44_core/: __init__.py  protocol.py
custom_components/plan44_integration/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  plan44_client.py  services.yaml  store.py  system_health.py
devtools/: .env.live.example  .env.p44.example  dump_p44_devices.py  run_live_tests.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVICE_IMPORT.md  HOME_ASSISTANT_YAML.md  TESTING.md  VIRTUAL_DEVICES.md
plan44_core/: harness.py  models.py  protocol.py  session.py
tests/: conftest.py
tests/live/: __init__.py  conftest.py  test_live_binary_sensor.py  test_live_light.py  test_live_sensor.py  test_live_switch.py
tests/unit/: test_device_templates.py  test_inbound_sensor_dispatch.py  test_keepalive_message.py  test_protocol_edge_cases.py  test_protocol_mapping.py  test_translations_no_tags.py  test_web_client.py
(+22 files in other folders)
