[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan44-core"
version = "0.16.0"
description = "Core protocol and live-test tooling for the plan44 Home Assistant integration"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Kay" },
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["plan44_core*"]
exclude = ["tests*", "custom_components*", "devtools*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
markers = [
  "live_p44: tests against a real plan44 bridge",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = [
  "tests/"
]
